# hw_1_web_basics

./: index.html  main.py  pyproject.toml
