[tool.poetry]
name = "hw-1-web-basics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hw_1_web_basics"}]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
